<resources>
    <string name="server_client_id" translatable="false">560380184988-d82soavaepccve0i6mspp3voll0320od.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1136919013097854</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1136919013097854</string>

    <string name="app_name">reactMe</string>
    <string name="menu_chat_detail__item__action_settings">Settings</string>
    <string name="activity_login__edit_text__email_hint">Email</string>
    <string name="activity_login__edit_text__password_hint">Password</string>
    <string name="activity_login__button__text">Login</string>
    <string name="activity_login__text_view__signup_info_text">Don\'t have an account? <u>Create one</u>.</string>
    <string name="activity_login__image_view__logo_description">Logo</string>
    <string name="activity_login__button__facebook_text">Login with Facebook</string>
    <string name="activity_login__button__google_plus_login_text">Login with Google Plus</string>
    <string name="activity_signup__edit_text__name_hint">Name</string>
    <string name="activity_signup__edit_text__address_hint">Address</string>
    <string name="activity_signup__edit_text__mobile_number_hint">Mobile Number</string>
    <string name="activity_signup__edit_text__reenter_password_hint">Re-enter Password</string>
    <string name="activity_signup__button__create_account_text">Create Account</string>
    <string name="activity_signup__text_view__already_member_login_text">Already a member? Login</string>
    <string name="title_activity_main_swipe">MainSwipeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="server_default">http://dork-943e.azurewebsites.net</string>

    <!-- errors -->
    <string name="activity_splash_screen__error__bad_permissions">Please give reactMe the permissions to access the camera and write data to function properly. The app cannot be used without these features.</string>
    <string name="activity_login__login_failed">Login failed</string>
    <string name="error_couldnt_connect_or_register">Could not verify or register user!</string>
    <string name="error_couldnt_check_user_id">Error: Could not check user id!</string>
    <string name="activity_signup__signup_failed">Failed to signup user!</string>
    <string name="fragment_user__image_view__profile_picture_content_description">Profile picture description</string>
    <string name="fragment_user__text_view__plain_text_for_preview">Plain text for preview</string>
    <string name="fragment_user__image_view__user_status_description">User status description</string>
    <string name="activity_main__pager_title__friends">Friends</string>
    <string name="activity_main__pager_title__act_wild">Act Wild</string>
    <string name="activity_main__pager_title__my_acts">My Acts</string>
    <string name="fragment_my_acts__text_view__no_new_content_available_text">No new content available...</string>
    <string name="title_activity_chat_detail">ChatDetailActivity</string>
    <string name="view__text_view__large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="title_activity_react">ReactActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="activity_react__text_view__dummy_content">DUMMY\nCONTENT</string>
    <string name="activity_signup__image_view__logo_description">Logo</string>
    <string name="activity_signup__login_failed">Login failed</string>
    <string name="activity_signup__edit_text__email_hint">Email</string>
    <string name="activity_signup__edit_text__password_hint">Password</string>
    <string name="activity_signup__validation_error__name_length">at least 3 characters</string>
    <string name="activity_signup__validation_error__address_invalid">Enter Valid Address</string>
    <string name="activity_signup__validation_error__email_invalid">enter a valid email address</string>
    <string name="activity_signup__validation_error__password_length">between 4 and 10 alphanumeric characters</string>
    <string name="activity_signup__validation_error__password_mismatch">Password entires do not match</string>
    <string name="activity_signup__info__progress_message">Creating Account...</string>

    <string name="menu_main__item__action_settings">Settings</string>

</resources>
