<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="72dp">

        <ImageView
            android:id="@+id/avatar_imageview"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/fragment_user__image_view__profile_picture_content_description"
            android:src="@drawable/smily_face"/>

        <LinearLayout
            android:id="@+id/textview_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/icon_imageview"
            android:layout_toRightOf="@+id/avatar_imageview"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/adapter_user__text_view__id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_user__text_view__plain_text_for_preview"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/adapter_user__text_view__content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_user__text_view__plain_text_for_preview"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/icon_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/fragment_user__image_view__user_status_description"
            android:src="@drawable/messenger_bubble_small_blue"/>

    </RelativeLayout>

</LinearLayout>
